--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "concurrently": "^8.2.0",
     "cross-env": "^7.0.3",
     "eslint": "^8.42.0",
     "tsx": "^3.12.7"
