--- a/package.json
+++ b/package.json
@@ -21,11 +21,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.2.0",
-    "esbuild": "^0.18.3",
-    "esbuild-sass-plugin": "^2.9.0",
     "express": "^4.18.2",
-    "postcss": "^8.4.24",
-    "postcss-modules": "^6.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.13.0",
@@ -39,9 +35,15 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/react": "^18.2.12",
+    "@types/react-css-modules": "^4.6.4",
     "concurrently": "^8.2.0",
     "cross-env": "^7.0.3",
+    "css-tree": "^2.3.1",
+    "esbuild": "^0.17.19",
+    "esbuild-sass-plugin": "^2.9.0",
     "eslint": "^8.42.0",
+    "postcss": "^8.4.24",
+    "postcss-modules": "^6.0.0",
     "tsx": "^3.12.7"
   }
 }
