feat: started adding stuff

--- a/package.json
+++ b/package.json
@@ -19,9 +19,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@mantine/core": "^6.0.14",
+    "@mantine/hooks": "^6.0.14",
+    "@nlpjs/basic": "^4.27.0",
+    "@phosphor-icons/react": "^2.0.10",
+    "ai": "^2.1.7",
     "cors": "^2.8.5",
     "dotenv": "^16.2.0",
     "express": "^4.18.2",
+    "node-nlp": "^4.27.0",
+    "openai-edge": "^1.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.13.0",
