--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nlpjs/basic": "^4.27.0",
     "@phosphor-icons/react": "^2.0.10",
     "ai": "^2.1.7",
+    "axios": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^16.2.0",
     "express": "^4.18.2",
