--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-router-dom": "^6.13.0",
     "reflect-metadata": "^0.1.13",
     "socket.io": "^4.6.2",
+    "socket.io-client": "^4.7.0",
     "sqlite3": "^5.1.6",
     "typeorm": "^0.3.16",
     "typescript": "^5.1.3"
